added filterByDate api
